--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,4 +70,4 @@
 
 <!--Here we are having a form with 4 input types, there the users have to register.
 After all the fields in the form are filled then we give a post ajax request to the '/' part and then the database entry part will be continued and a new user will be created in the database.
-After that the users can login giving the login details after the registration part is completed -->
+After that the users can login giving the login details after the registration part is completed.-->
