--- a/views/login.ejs
+++ b/views/login.ejs
@@ -57,7 +57,7 @@
 		</div>
 		<div id="LangTable"><a href="/profile" id="aa"></a>
 		</div>
-		<div><span>Forgot password?</span><a href="/forgetpass">Click here</a>
+		<div><span>Forgot password??</span><a href="/forgetpass">Click here</a>
 		</div>
 	</div>
 </body>
